--- a/CanMyPCRun/form.css
+++ b/CanMyPCRun/form.css
@@ -1,7 +1,3 @@
-body {
-    font-family: sans-serif;
-  }
-
   .container {
     width: 500px;
     margin: 0 auto;
@@ -56,3 +52,47 @@ body {
       margin-right: 5px;
       padding-bottom: 5px;
   }
+
+  header {
+    background-color: #fff;
+    padding: 1rem 2rem;
+    border-bottom: 1px solid #ddd;
+    width: 100%;
+    padding-top: 0;
+    user-select: none;
+}
+
+header nav {
+    display: flex;
+    align-items: center;
+}
+
+header nav a {
+    text-decoration: none;
+    color: #333;
+    margin-right: 450px;
+    font-weight: 600;
+    font-family: 'font_header_nav_a';
+    font-size: 25px;
+}
+
+header nav a:last-child {
+    margin-right: 0;
+}
+
+#logo{
+  font-family: "logo_font";
+  margin-right: 200px;
+  margin-left: 50px;
+  color: blueviolet;
+}
+
+@font-face {
+  font-family:"logo_font" ;
+  src: url("Fontes/Font_Outfit_styles/Outfit-Bold.ttf");
+}
+
+@font-face {
+  font-family:"font_header_nav_a" ;
+  src: url("Fontes/BarlowCondensed-ExtraLight.ttf");
+}
